2008-04-28  Andy Buckley  <andy@insectnation.org>

	* Merged in major "ProjectionHandler" branch. Projections are now
	all stored centrally in the singleton ProjectionHandler container,
	rather than as member pointers in projections and analyses. This
	also affects the applyProjection mechanism, which is now available
	as a templated method on Analysis and Projection. Still a few
	wrinkles need to be worked out.

	* The branch changes required a comprehensive review of all
	existing projections and analyses: lots of tidying up of these
	classes, as well as the auxiliary code like math utils, has taken
	place. Too much to list and track, unfortunately!

2008-03-28  Andy Buckley  <buckley@pc54.hep.ucl.ac.uk>

  * Started second CDF UE analysis ("Acosta"): histograms defined.

  * Fixed anomalous factor of 2 in LWH conversion from Profile1D
    to DataPointSet.

	* Added pT distribution histos to CDF 2001 UE analysis.

2008-03-26  Andy Buckley  <andy@insectnation.org>

	* Removed charged+neutral versions of histograms and projections
	from DELPHI analysis since they just duplicate the more robust
	charged-only measurements and aren't really of interest for
	tuning.

2008-03-10  Andy Buckley  <andy@insectnation.org>

	* Profile histograms now use error computation with proper
	weighting, as described here:
	http://en.wikipedia.org/wiki/Weighted_average

2008-02-28  Andy Buckley  <andy@insectnation.org>

	* Added --enable-jade flag for Professor studies with patched
	FastJet.

	* Minor fixes to LCG tag generator and gfilt m4 macros.

	* Fixed projection slicing issues with Field UE analysis.

	* Added Analysis::vetoEvent(e) function, which keeps track of the
	correction to the sum of weights due to event vetoing in analysis
	classes.

2008-02-26  Andy Buckley  <andy@insectnation.org>

	* Vector<N> and derived classes now initialise to have zeroed
	components when the no-arg constructor is used.

	* Added Analysis::scale() function to scale 1D