@@ -1,3 +1,8 @@
+2008-04-29  Andy Buckley  <andy@insectnation.org>
+
+	* Fixed ambiguity in TrackJet algorithm as to how the iteration
+	continues when tracks are merged into jets in the inner loop.
+
 2008-04-28  Andy Buckley  <andy@insectnation.org>
 
 	* Merged in major "ProjectionHandler" branch. Projections are now
